--- a/src/html/pap-el-search-form.html
+++ b/src/html/pap-el-search-form.html
@@ -10,6 +10,23 @@
 			width: 202px;
 			height: 40px;
 		}
+		.vdp-datepicker input {
+		    -webkit-appearance: none;
+		    background-color: #fff;
+		    border-radius: 4px;
+		    border: 1px solid #d8dce5;
+		    box-sizing: border-box;
+		    color: #5a5e66;
+		    display: inline-block;
+		    font-size: inherit;
+		    height: 40px;
+		    line-height: 1;
+		    outline: 0;
+		    padding: 0 15px;
+		    -webkit-transition: border-color .2s cubic-bezier(.645,.045,.355,1);
+		    transition: border-color .2s cubic-bezier(.645,.045,.355,1);
+		    width: 100%;
+		}
 	</style>
 </head>
 <body>
@@ -39,7 +56,8 @@
                     options: [
                         {label:"男", value: "MAIL"}, {label:"女", value: "FEMAIL"}
                     ]
-                }
+               },
+               {type: 'date', prop: 'birthday', label: '出生日期', placeholder: "出生日期"}
             ]
         }
     })
