--- a/src/html/pap-el-search-form.html
+++ b/src/html/pap-el-search-form.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<!-- 引入样式 -->
-	<link rel="stylesheet"
-		  href="https://cdn.bootcss.com/element-ui/2.0.6/theme-chalk/index.css">
-	<style>
-		.v-select.searchable .dropdown-toggle {
-			width: 202px;
-			height: 40px;
-		}
-		.vdp-datepicker input {
-			-webkit-appearance: none;
-			background-color: #fff;
-			border-radius: 4px;
-			border: 1px solid #d8dce5;
-			box-sizing: border-box;
-			color: #5a5e66;
-			display: inline-block;
-			font-size: inherit;
-			height: 40px;
-			line-height: 1;
-			outline: 0;
-			padding: 0 15px;
-			-webkit-transition: border-color .2s cubic-bezier(.645,.045,.355,1);
-			transition: border-color .2s cubic-bezier(.645,.045,.355,1);
-			width: 100%;
-		}
-	</style>
+    <meta charset="UTF-8">
+    <!-- 引入样式 -->
+    <link rel="stylesheet"
+          href="https://cdn.bootcss.com/element-ui/2.0.6/theme-chalk/index.css">
+    <style>
+        .v-select.searchable .dropdown-toggle {
+            width: 202px;
+            height: 40px;
+        }
+        .vdp-datepicker input {
+            -webkit-appearance: none;
+            background-color: #fff;
+            border-radius: 4px;
+            border: 1px solid #d8dce5;
+            box-sizing: border-box;
+            color: #5a5e66;
+            display: inline-block;
+            font-size: inherit;
+            height: 40px;
+            line-height: 1;
+            outline: 0;
+            padding: 0 15px;
+            -webkit-transition: border-color .2s cubic-bezier(.645,.045,.355,1);
+            transition: border-color .2s cubic-bezier(.645,.045,.355,1);
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
 <div id="app">
-	<PapElSearchForm :inline="inline" :forms="forms"></PapElSearchForm>
+    <PapElSearchForm :inline="inline" :forms="forms"></PapElSearchForm>
 </div>
 </body>
 <!-- 先引入 Vue -->
@@ -47,6 +47,7 @@
                 {prop: 'name', label: '姓名', value: 'alexgaoyh', placeholder: "我是占位符，itemWidth：240", itemWidth:240},
                 {type: 'text', prop: 'place', label: '占位符', value: '', placeholder: "type:text", itemWidth:240},
                 {type: 'number', prop: 'age', label: '年龄', value: '', placeholder: "type:number", itemWidth:240},
+                // numberKeyLength 整数位长度 numberDecimalLength 小数位长度
                 {type: 'number', prop: 'weight', label: '体重', numberKeyLength: 3, numberDecimalLength: 2, value: '', placeholder: "type:number", itemWidth:240},
                 {type: 'select', prop: 'sex', label: '性别', placeholder: "性别", itemWidth:202,
                     disabled: false,
