--- a/src/html/datafield.html
+++ b/src/html/datafield.html
@@ -41,12 +41,24 @@
 	          <el-input placeholder="请输入内容" v-model="temp.code" v-bind:readonly="dialogTitle=='信息查看'">
 	          </el-input>
 	        </el-form-item>
-	        <el-form-item label="名称">
+	        <el-form-item label="系统编号">
+	          <el-input placeholder="请输入内容" v-model="temp.projectId" v-bind:readonly="dialogTitle=='信息查看'">
+	          </el-input>
+	        </el-form-item>
+	        <el-form-item label="模块编号">
+	          <el-input placeholder="请输入内容" v-model="temp.moduleId" v-bind:readonly="dialogTitle=='信息查看'">
+	          </el-input>
+	        </el-form-item>
+	        <el-form-item label="所属类编号">
+	          <el-input placeholder="请输入内容" v-model="temp.clazzId" v-bind:readonly="dialogTitle=='信息查看'">
+	          </el-input>
+	        </el-form-item>
+	        <el-form-item label="属性名称">
 	          <el-input placeholder="请输入内容" v-model="temp.name" v-bind:readonly="dialogTitle=='信息查看'">
 	          </el-input>
 	        </el-form-item>
-	        <el-form-item label="系统管理者">
-	          <el-input placeholder="请输入内容" v-model="temp.manager" v-bind:readonly="dialogTitle=='信息查看'">
+	        <el-form-item label="属性值">
+	          <el-input placeholder="请输入内容" v-model="temp.field" v-bind:readonly="dialogTitle=='信息查看'">
 	          </el-input>
 	        </el-form-item>
 	      </el-form>
@@ -71,10 +83,13 @@
 			baseUrl: 'http://127.0.0.1:28762',
 			columns: [
 				{width: 30, titleAlign: 'center',columnAlign:'center',type: 'selection',isResize:true},
-				{field: 'id', title:'编号', width: 100, titleAlign: 'center',columnAlign:'center',isResize:true},
+				{field: 'id', title:'编号', width: 150, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'code', title:'编码', width: 100, titleAlign: 'center',columnAlign:'center',isResize:true},
-                {field: 'name', title:'系统名称', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
-                {field: 'manager', title: '系统管理者', width: 300, titleAlign: 'center',columnAlign:'center'}
+                {field: 'projectId', title:'所属系统', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'moduleId', title:'所属模块', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'clazzId', title:'所属类文件', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'name', title:'属性名称', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'field', title:'属性值', width: 300, titleAlign: 'center',columnAlign:'center'}
             ],
 			tableData: [],
 			selectedTableData: [],
@@ -94,7 +109,7 @@
 		methods: {
             getList() {
             	var _this = this;
-            	axios.post(_this.baseUrl + '/v1/rbac/dataproject/querypage', "queryJSON="+JSON.stringify(_this.listQuery)+"&pageJSON="+JSON.stringify(_this.listQuery)+"" )
+            	axios.post(_this.baseUrl + '/v1/rbac/datafield/querypage', "queryJSON="+JSON.stringify(_this.listQuery)+"&pageJSON="+JSON.stringify(_this.listQuery)+"" )
 				.then(function(res){
 				  console.log(res);
 				  if(res.data.code == '200') {
@@ -126,7 +141,7 @@
             handleDelete() {
             	var _this = this;
             	if(this.selectedTableData && this.selectedTableData.length == 1) {
-            		axios.post(_this.baseUrl + '/v1/rbac/dataproject/delete', "deleteJSON="+JSON.stringify(_this.selectedTableData[0]) )
+            		axios.post(_this.baseUrl + '/v1/rbac/datafield/delete', "deleteJSON="+JSON.stringify(_this.selectedTableData[0]) )
 					.then(function(res){
 						console.log(res);
 						if(res.data.code == '200') {
@@ -160,7 +175,7 @@
             dialogSaveOrUpdateClick() {
             	var _this = this;
                 if(this.temp && this.temp.id != undefined && this.temp.id != '') {
-					axios.post(_this.baseUrl + '/v1/rbac/dataproject/update', "updateJSON="+JSON.stringify(_this.temp) )
+					axios.post(_this.baseUrl + '/v1/rbac/datafield/update', "updateJSON="+JSON.stringify(_this.temp) )
 					.then(function(res){
 						console.log(res);
 						if(res.data.code == '200') {
@@ -173,7 +188,7 @@
 						console.log(err);
 					});
                 } else {
-					axios.post(_this.baseUrl + '/v1/rbac/dataproject/add', "addJSON="+JSON.stringify(_this.temp) )
+					axios.post(_this.baseUrl + '/v1/rbac/datafield/add', "addJSON="+JSON.stringify(_this.temp) )
 					.then(function(res){
 						console.log(res);
 						if(res.data.code == '200') {
