--- a/src/html/datamodule.html
+++ b/src/html/datamodule.html
@@ -45,6 +45,10 @@
 	          <el-input placeholder="请输入内容" v-model="temp.name" v-bind:readonly="dialogTitle=='信息查看'">
 	          </el-input>
 	        </el-form-item>
+	        <el-form-item label="系统编号">
+	          <el-input placeholder="请输入内容" v-model="temp.projectId" v-bind:readonly="dialogTitle=='信息查看'">
+	          </el-input>
+	        </el-form-item>
 	        <el-form-item label="系统管理者">
 	          <el-input placeholder="请输入内容" v-model="temp.manager" v-bind:readonly="dialogTitle=='信息查看'">
 	          </el-input>
@@ -71,9 +75,10 @@
 			baseUrl: 'http://127.0.0.1:28762',
 			columns: [
 				{width: 30, titleAlign: 'center',columnAlign:'center',type: 'selection',isResize:true},
-				{field: 'id', title:'编号', width: 100, titleAlign: 'center',columnAlign:'center',isResize:true},
+				{field: 'id', title:'编号', width: 150, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'code', title:'编码', width: 100, titleAlign: 'center',columnAlign:'center',isResize:true},
-                {field: 'name', title:'系统名称', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'projectId', title:'所属系统', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'name', title:'模块名称', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'manager', title: '系统管理者', width: 300, titleAlign: 'center',columnAlign:'center'}
             ],
 			tableData: [],
@@ -94,7 +99,7 @@
 		methods: {
             getList() {
             	var _this = this;
-            	axios.post(_this.baseUrl + '/v1/rbac/dataproject/querypage', "queryJSON="+JSON.stringify(_this.listQuery)+"&pageJSON="+JSON.stringify(_this.listQuery)+"" )
+            	axios.post(_this.baseUrl + '/v1/rbac/datamodule/querypage', "queryJSON="+JSON.stringify(_this.listQuery)+"&pageJSON="+JSON.stringify(_this.listQuery)+"" )
 				.then(function(res){
 				  console.log(res);
 				  if(res.data.code == '200') {
@@ -126,7 +131,7 @@
             handleDelete() {
             	var _this = this;
             	if(this.selectedTableData && this.selectedTableData.length == 1) {
-            		axios.post(_this.baseUrl + '/v1/rbac/dataproject/delete', "deleteJSON="+JSON.stringify(_this.selectedTableData[0]) )
+            		axios.post(_this.baseUrl + '/v1/rbac/datamodule/delete', "deleteJSON="+JSON.stringify(_this.selectedTableData[0]) )
 					.then(function(res){
 						console.log(res);
 						if(res.data.code == '200') {
@@ -160,7 +165,7 @@
             dialogSaveOrUpdateClick() {
             	var _this = this;
                 if(this.temp && this.temp.id != undefined && this.temp.id != '') {
-					axios.post(_this.baseUrl + '/v1/rbac/dataproject/update', "updateJSON="+JSON.stringify(_this.temp) )
+					axios.post(_this.baseUrl + '/v1/rbac/datamodule/update', "updateJSON="+JSON.stringify(_this.temp) )
 					.then(function(res){
 						console.log(res);
 						if(res.data.code == '200') {
@@ -173,7 +178,7 @@
 						console.log(err);
 					});
                 } else {
-					axios.post(_this.baseUrl + '/v1/rbac/dataproject/add', "addJSON="+JSON.stringify(_this.temp) )
+					axios.post(_this.baseUrl + '/v1/rbac/datamodule/add', "addJSON="+JSON.stringify(_this.temp) )
 					.then(function(res){
 						console.log(res);
 						if(res.data.code == '200') {
