数据权限类页面维护.

--- a/src/html/dataclazz.html
+++ b/src/html/dataclazz.html
@@ -42,12 +42,14 @@
 	          </el-input>
 	        </el-form-item>
 	        <el-form-item label="系统编号">
-	          <el-input placeholder="请输入内容" v-model="temp.projectId" v-bind:readonly="dialogTitle=='信息查看'">
-	          </el-input>
+				<el-select v-model="temp.projectId" placeholder="请选择" v-bind:disabled="dialogTitle=='信息查看'" @change="selectProjectChange">
+					<el-option v-for="item in projectData" :key="item.id" :label="item.name" :value="item.id"></el-option>
+				</el-select>
 	        </el-form-item>
 	        <el-form-item label="模块编号">
-	          <el-input placeholder="请输入内容" v-model="temp.moduleId" v-bind:readonly="dialogTitle=='信息查看'">
-	          </el-input>
+				<el-select v-model="temp.moduleId" placeholder="请选择" v-bind:disabled="dialogTitle=='信息查看'">
+					<el-option v-for="item in moduleData" :key="item.id" :label="item.name" :value="item.id"></el-option>
+				</el-select>
 	        </el-form-item>
 	        <el-form-item label="类名称">
 	          <el-input placeholder="请输入内容" v-model="temp.name" v-bind:readonly="dialogTitle=='信息查看'">
@@ -81,6 +83,8 @@
 		el: '#app',
 		data: {
 			baseUrl: 'http://127.0.0.1:28762',
+			projectData: [],
+			moduleData: [],
 			columns: [
 				{width: 30, titleAlign: 'center',columnAlign:'center',type: 'selection',isResize:true},
 				{field: 'id', title:'编号', width: 150, titleAlign: 'center',columnAlign:'center',isResize:true},
@@ -101,12 +105,49 @@
             },
             dialogTitle: '',
             dialogFormVisible: false,
-            temp: {}
+            temp: {
+            	projectId: '',
+            	moduleId: ''
+            }
 		},
         created () {
         	this.getList();
+        	this.getProjectList();
+        	this.getModuleList('');
         },
 		methods: {
+			selectProjectChange(projectId) {
+				this.temp.moduleId = '';
+				this.getModuleList(projectId)
+			},
+			getModuleList(projectId) {
+				var _this = this;
+            	axios.post(_this.baseUrl + '/v1/rbac/datamodule/query', "queryJSON="+JSON.stringify({projectId: projectId}) )
+				.then(function(res){
+				  console.log(res);
+				  if(res.data.code == '200') {
+				  	_this.moduleData = res.data.list;
+				  }
+				  
+				})
+				.catch(function(err){
+				  console.log(err);
+				});
+			},
+			getProjectList() {
+				var _this = this;
+            	axios.post(_this.baseUrl + '/v1/rbac/dataproject/query', "queryJSON="+JSON.stringify({}) )
+				.then(function(res){
+				  console.log(res);
+				  if(res.data.code == '200') {
+				  	_this.projectData = res.data.list;
+				  }
+				  
+				})
+				.catch(function(err){
+				  console.log(err);
+				});
+			},
             getList() {
             	var _this = this;
             	axios.post(_this.baseUrl + '/v1/rbac/dataclazz/querypage', "queryJSON="+JSON.stringify(_this.listQuery)+"&pageJSON="+JSON.stringify(_this.listQuery)+"" )
@@ -126,7 +167,10 @@
             	this.getList();
             },
             handleAdd() {
-            	this.temp = {};
+            	this.temp = {
+            		projectId: '',
+            		moduleId: ''
+            	};
             	this.dialogFormVisible = true;
             },
             handleUpdate() {
