数据权限类页面友好型属性展示.

--- a/src/html/datafield.html
+++ b/src/html/datafield.html
@@ -92,8 +92,11 @@
 				{field: 'id', title:'编号', width: 150, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'code', title:'编码', width: 100, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'projectId', title:'所属系统', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'dataProjectName', title:'系统名称', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'moduleId', title:'所属模块', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'dataModuleName', title:'模块名称', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'clazzId', title:'所属类文件', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'dataClazzName', title:'所属类名称', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'name', title:'属性名称', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'field', title:'属性值', width: 300, titleAlign: 'center',columnAlign:'center'}
             ],
