--- a/src/html/datamodule.html
+++ b/src/html/datamodule.html
@@ -80,6 +80,7 @@
 				{field: 'id', title:'编号', width: 150, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'code', title:'编码', width: 100, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'projectId', title:'所属系统', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'dataProjectName', title:'系统名称', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'name', title:'模块名称', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'manager', title: '系统管理者', width: 300, titleAlign: 'center',columnAlign:'center'}
             ],
