--- a/src/html/dataclazz.html
+++ b/src/html/dataclazz.html
@@ -90,7 +90,9 @@
 				{field: 'id', title:'编号', width: 150, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'code', title:'编码', width: 100, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'projectId', title:'所属系统', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'dataProjectName', title:'系统名称', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'moduleId', title:'所属模块', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'dataModuleName', title:'模块名称', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'name', title:'类名称', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'alaisName', title:'类别名', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'clazzPath', title:'类全路径', width: 300, titleAlign: 'center',columnAlign:'center'}
