--- a/src/html/datafield.html
+++ b/src/html/datafield.html
@@ -83,7 +83,7 @@
 	new Vue({
 		el: '#app',
 		data: {
-			baseUrl: 'http://127.0.0.1:28762',
+			baseUrl: 'http://qa-auth.scm.zhongpin.cn/',
 			projectData: [],
 			moduleData: [],
 			clazzData: [],
