--- a/src/html/dataclazz.html
+++ b/src/html/dataclazz.html
@@ -82,7 +82,7 @@
 	new Vue({
 		el: '#app',
 		data: {
-			baseUrl: 'http://127.0.0.1:28762',
+			baseUrl: 'http://qa-auth.scm.zhongpin.cn/',
 			projectData: [],
 			moduleData: [],
 			columns: [
