--- a/src/html/datamodule.html
+++ b/src/html/datamodule.html
@@ -73,7 +73,7 @@
 	new Vue({
 		el: '#app',
 		data: {
-			baseUrl: 'http://127.0.0.1:28762',
+			baseUrl: 'http://qa-auth.scm.zhongpin.cn/',
 			projectData: [],
 			columns: [
 				{width: 30, titleAlign: 'center',columnAlign:'center',type: 'selection',isResize:true},
