--- a/src/html/dataproject.html
+++ b/src/html/dataproject.html
@@ -72,7 +72,7 @@
 	new Vue({
 		el: '#app',
 		data: {
-			baseUrl: 'http://127.0.0.1:28762',
+			baseUrl: 'http://qa-auth.scm.zhongpin.cn/',
 			papPageSize: 10,
 			papPageSizeOption: [10, 20, 30, 50, 100],
 			columns: [
