--- a/src/html/resource.html
+++ b/src/html/resource.html
@@ -74,13 +74,13 @@
 <!-- 引入组件库 -->
 <script src="https://cdn.bootcss.com/element-ui/2.0.7/index.js"></script>
 <script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
-<script src="../js/app/rbac/pap-tree-grid.min.js"></script>
+<script src="../js/lib/pap-tree-grid.min.js"></script>
 <script>
 	Vue.use(window.PapTreeGrid)
 	new Vue({
 		el: '#app',
 		data: {
-			baseUrl: 'http://127.0.0.1:28762',
+			baseUrl: 'http://qa-auth.scm.zhongpin.cn/',
 			dialogTitle: '',
 			dialogFormVisible: false,
 			temp: {},
