--- a/src/html/user.html
+++ b/src/html/user.html
@@ -44,7 +44,7 @@
 	new Vue({
 		el: '#app',
 		data: {
-			baseUrl: 'http://qa-auth.scm.zhongpin.cn/',
+			baseUrl: 'http://127.0.0.1:28762/',
 			operActionProps: [{
                 type: 'primary',
                 text: '角色配置'
