--- a/src/html/userextraprop.html
+++ b/src/html/userextraprop.html
@@ -80,7 +80,7 @@
 	new Vue({
 		el: '#app',
 		data: {
-			baseUrl: 'http://qa-auth.scm.zhongpin.cn/',
+			baseUrl: 'http://127.0.0.1:28762/',
 			userData: [],
 			keyOperationValueEnumOption: [],
 			papPageSize: 10,
