静态演示页面维护.

--- a/src/html/userfieldprop.html
+++ b/src/html/userfieldprop.html
@@ -111,7 +111,10 @@
 				{width: 30, titleAlign: 'center',columnAlign:'center',type: 'selection',isResize:true},
 				{field: 'id', title:'编号', width: 150, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'userId', title:'所属用户', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
-                {field: 'fieldId', title:'属性键', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'dataProjectName', title:'所属项目', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'dataModuleName', title:'所属模块', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'dataClazzName', title:'所属类文件', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
+                {field: 'dataFieldName', title:'所属属性', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'propOper', title:'属性操作符', width: 300, titleAlign: 'center',columnAlign:'center',isResize:true},
                 {field: 'propValue', title: '属性值', width: 300, titleAlign: 'center',columnAlign:'center'}
             ],
